<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_feature_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_feature_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/feature_name" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_done_edit_feature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:text="@string/done"
                style="@style/DefaultButton"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_cancel_edit_feature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/DefaultButton"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>